--- a/style.css
+++ b/style.css
@@ -50,9 +50,15 @@ footer {
     gap: 1rem;
     padding: 1em 0;
 }
-.gallery img {
-    width: 100%;
-    height: auto;
+
+.gallery-item {
+    overflow: hidden;
     border-radius: 12px;
+}
+.gallery-item img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    display: block;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
