--- a/style.css
+++ b/style.css
@@ -1,14 +1,36 @@
 
 body {
-    font-family: 'Times New Roman', Times, serif;
-    background-color: #fefefe;
-    color: #111;
+    display: flex;
     margin: 0;
-    padding: 0;
-}
-h1, h2 {
     font-family: 'Times New Roman', Times, serif;
 }
-nav a {
-    font-family: 'Times New Roman', Times, serif;
+.sidebar {
+    width: 220px;
+    background-color: #f4f4f4;
+    padding: 20px;
+    height: 100vh;
+    position: fixed;
+}
+.sidebar h2 {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+}
+.sidebar ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+.sidebar ul li {
+    margin-bottom: 10px;
+}
+.sidebar ul li a {
+    text-decoration: none;
+    color: #111;
+}
+.sidebar ul li a:hover {
+    text-decoration: underline;
+}
+.main-content {
+    margin-left: 240px;
+    padding: 40px;
+    flex: 1;
 }
