--- a/style.css
+++ b/style.css
@@ -1,17 +1,36 @@
 
 body {
+    display: flex;
+    margin: 0;
     font-family: 'Times New Roman', Times, serif;
-    margin: 40px;
-    background-color: #fefefe;
+}
+.sidebar {
+    width: 220px;
+    background-color: #f4f4f4;
+    padding: 20px;
+    height: 100vh;
+    position: fixed;
+}
+.sidebar h2 {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+}
+.sidebar ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+.sidebar ul li {
+    margin-bottom: 10px;
+}
+.sidebar ul li a {
+    text-decoration: none;
     color: #111;
 }
-h1 {
-    font-size: 2em;
+.sidebar ul li a:hover {
+    text-decoration: underline;
 }
-p {
-    font-size: 1.1em;
-    line-height: 1.6em;
-}
-a {
-    color: #000;
+.main-content {
+    margin-left: 240px;
+    padding: 40px;
+    flex: 1;
 }
